Introduce MMappedChunksManager to coordinate transition of chunk from live to close index (#198)
Signed-off-by: jinnyw <jinnyw@uber.com>
Co-authored-by: jinnyw <jinnyw@uber.com>